ignore public local resources

--- a/.gitignore
+++ b/.gitignore
@@ -465,3 +465,6 @@ pyvenv.cfg
 pip-selfcheck.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python,django,virtualenv,pycharm+all,git,jupyternotebooks,test
+
+resources/public/datasets/
+resources/public/networks/
